kubernetes/prod/reporter-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporter-server
  namespace: prod
spec:
  template:
    spec:
      containers:
      - name: reporter-server
---
apiVersion: v1
kind: Service
metadata:
  name: reporter-server
  namespace: prod
